# sqlite_modern_cpp

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  License.txt  Makefile  Makefile.in  README.md  configure  configure.ac  example.cpp  sqlite3.h  sqlite_modern_cpp.h  sqlite_modern_cpp.pc  sqlite_modern_cpp.pc.in
cmake/: CatchAddTests.cmake  HunterGate.cmake
hdr/: collectors.h  sqlite_modern_cpp.h
hdr/sqlite_modern_cpp/: errors.h  log.h  sqlcipher.h  type_wrapper.h
hdr/sqlite_modern_cpp/extensions/: boost_json_spirit.h  boost_optional.h  boost_uuid.h  null_support.h  std_time_t.h
hdr/sqlite_modern_cpp/lists/: error_codes.h
hdr/sqlite_modern_cpp/utility/: function_traits.h  uncaught_exceptions.h  utf16_utf8.h  variant.h
src/: sqlite_modern_cpp.h  test.cpp
src/extensions/: boost_json_spirit.h  boost_uuid.h
src/utility/: sfinae.h
tests/: blob_example.cc  boost_optional.cc  collector.cc  datatypes.cc  error_log.cc  error_log2.cc  exception_dont_execute.cc  exception_dont_execute_nested.cc  exceptions.cc  extended_exceptions.cc  flags.cc  functions.cc  functors.cc  lvalue_functor.cc  lvalue_functor_example.cc  mov_ctor.cc  named.cc  null_value.cc  nullptr_uniqueptr.cc  prepared_statment.cc  readme_example.cc  shared_connection.cc  simple_examples.cc  sqlcipher.cc  std_optional.cc  string_view.cc  trycatchblocks.cc  variant.cc
